--- a/packages/react-scripts/.editorconfig
+++ b/packages/react-scripts/.editorconfig
@@ -17,6 +17,6 @@ insert_final_newline = true
 [*.md]
 trim_trailing_whitespace = false
 
-[{*.scss,*.json,*.babelrc,*.config.*js}]
+[{*.scss,*.json,*.babelrc,*.js}]
 indent_style = space
 indent_size = 2
