--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@karambasecurity/react-scripts",
-  "version": "1.1.3",
+  "version": "1.1.4-kar.13",
   "description": "Configuration and scripts for Create React App.",
   "repository": "Pavek/create-react-app",
   "license": "MIT",
@@ -51,7 +51,7 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react-dev-utils": "^5.0.0",
+    "react-dev-utils": "^5.0.1",
     "resolve": "1.6.0",
     "sass-loader": "^6.0.6",
     "style-loader": "0.19.0",
